--- a/index.html
+++ b/index.html
@@ -1,22 +1,7 @@
-<!-- HTML Codes by Quackit.com -->
 <!DOCTYPE html>
-<title>Text Example</title>
-<style>
-div.container {
-background-color: #ffffff;
-}
-div.container p {
-font-family: Arial;
-font-size: 14px;
-font-style: normal;
-font-weight: normal;
-text-decoration: none;
-text-transform: none;
-color: #000000;
-background-color: #ffffff;
-}
-</style>
-
-<div class="container">
-<p>--Virtuallization Dev Team</p>
-</div>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
