--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<!DOCTYPE html>
-<html>
-<body>
-<p>--Virtualization Team 2021.</p>
-<p>--Ori Hub In-dev.</p>
-</body>
-</html>
+<canvas id="canvas"></canvas>
