--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<canvas id="canvas"></canvas>
+<!DOCTYPE html>
+<html>
+<body>
+<p>Virtualization Team 2021.</p>
+<p>Ori Hub Soon</p>
+</body>
+</html>
