--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 
-<h1 style="background-color:DodgerBlue;"Virtualization Developer Team 2021</h1>
-<p style="background-color:Tomato;">Ori Hub Soon</p>
+	<div style="background-color:dodgerblue; text-align:center;color:white;font-size:24px;">Virtualization Dev Team 2021</div>
+	<div style="background-color:rgb(69, 230, 6); text-align:center;color:white;font-size:24px;">Ori Hub Coming soon</div>
+	  </div>
 </body>
 </html>
