--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-	<div style="background-color:dodgerblue; text-align:center;color:white;font-size:24px;">Virtualization Dev Team 2021</div>
+	<div style="background-color:dodgerblue; text-align:center;color:white;font-size:24px;">Virtualization Developer Team 2021</div>
 	<div style="background-color:rgb(69, 230, 6); text-align:center;color:white;font-size:24px;">Ori Hub Coming soon</div>
 	  </div>
 </body>
