New Splash better bg

--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 <html>
 <head>
 <style>
-p {
-  background-image: url("https://media.tenor.co/videos/f8110b5b1a67f5d5843bfe025202e250/mp4");
+
+
+div {
+  background-image: url("https://media.discordapp.net/attachments/806648142418018335/806992509464739850/200.gif");
 }
+
+.p3 {
+  font-family: "Lucida Console", "Courier New", monospace;
+}
+
 </style>
 </head>
 <body>
+<div id="particles-js"></div>
 
-<p>Virtualization Developer Team 2021</p>
+<div class="p3"style="text-align:center;color:white;font-size:30px;">Virtualization Team 2021</div>
 
+<script src="particles.js"></script>
 </body>
 </html>
