--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  .p3 {
-    font-family: "Lucida Console", "Courier New", monospace;
-  }
-  
-  </style>
-  </head>
-  <body>
-  
-  <div class="p3"style="text-align:center;color:white;font-size:30px;">Virtualization Team 2021</div>
+  <header id="header">
+    <h2>Virtualization Developer Team</h2>
+    <!--<hr width="300" style="color:#49FF6B;">-->
+    <font size="2"><input type="text" placeholder="" value="Ori Hub Soon" style="textarea" disabled=""></font></header>
+
   <meta charset="utf-8">
   <title>Virtualization Developer Team</title>
-  <meta name="description" content="Use Ori Hub">
+  <meta name="description" content="Virtualization Developer Team">
   <meta name="author" content="Xiba" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="css/style.css">
