--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <header id="header">
-    <h2>Virtualization Developer Team</h2>
-    <!--<hr width="300" style="color:#49FF6B;">-->
-    <font size="2"><input type="text" placeholder="" value="Ori Hub Soon" style="textarea" disabled=""></font></header>
+  <h1 style="text-align:center;color:white;">Virtualization Developer Team</h1>
+  <p style="text-align:center;color:white;">Hello!</p>
 
   <meta charset="utf-8">
   <title>Virtualization Developer Team</title>
