--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <h1 style="text-align:center;color:white;font-size:50px;">Virtualization Developer Team</h1>
-  <p style="text-align:center;color:white;font-size:23px">Hello!</p>
+  <h1 class="center" style="text-align:center;color:white;font-size:50px;">Virtualization Developer Team</h1>
+  <p class="center" style="text-align:center;color:white;font-size:23px">Hello!</p>
 
   <meta charset="utf-8">
   <title>Virtualization Developer Team</title>
