--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <h1 class="center" style="text-align:center;color:white;font-size:50px;">Virtualization Developer Team</h1>
+  <h1 class="center" style="text-align:center;color:rgb(36, 214, 0);font-size:50px;">Virtualization Developer Team</h1>
   <p class="center" style="text-align:center;color:white;font-size:23px">Hello!</p>
 
   <meta charset="utf-8">
