--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  body {
+    font-family: 'Courier New', monospace;
+  }
+  </style>
+  </head>
+  <body>
 
-  <h1 class="center" style="text-align:center;color:rgb(36, 214, 0);font-size:50px;">Virtualization Developer Team</h1>
-  <p class="center" style="text-align:center;color:white;font-size:23px">Hello!</p>
-
+  <h1 class="center" style="text-align:center;color:rgb(255, 255, 255);font-size:50px;">Virtualization Developer Team</h1>
   <meta charset="utf-8">
   <title>Virtualization Developer Team</title>
   <meta name="description" content="Virtualization Developer Team">
