--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
   body {
     font-family: 'Courier New', monospace;
   }
   </style>
   </head>
   <body>
+    
+    <img src="https://media.discordapp.net/attachments/806648142418018335/807282427378532382/Ori_Logo.png" alt="Ori">
 
   <h1 class="center" style="text-align:center;color:rgb(255, 255, 255);font-size:50px;">Virtualization Developer Team</h1>
   <meta charset="utf-8">
