--- a/discord.html
+++ b/discord.html
@@ -7,3 +7,10 @@
     <p>Redirecting you to Ori Discord Server, Please follow <a href="https://discord.gg/XwcKN5wXr8">this link</a>.If it doesn't load</p>
   </body>
 </html>
+<title>Ori Lua</title>
+<meta name="description" content="Ori Lua Team">
+<meta name="author" content="Virtualization Developer Team" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<link rel="stylesheet" media="screen" href="css/style.css">
+</head>
+<body>
