--- a/discord.html
+++ b/discord.html
@@ -7,6 +7,7 @@
     <p>Redirecting you to Ori Discord Server, Please follow <a href="https://discord.gg/XwcKN5wXr8">this link</a>.If it doesn't load</p>
   </body>
 </html>
+<meta charset="utf-8">
 <title>Ori Lua</title>
 <meta name="description" content="Ori Lua Team">
 <meta name="author" content="Virtualization Developer Team" />
