--- a/discord.html
+++ b/discord.html
@@ -8,8 +8,8 @@
   </body>
 </html>
 <meta charset="utf-8">
-<title>Ori Lua</title>
-<meta name="description" content="Ori Lua Team">
+<title>Ori</title>
+<meta name="description" content="Ori discord Invite">
 <meta name="author" content="Virtualization Developer Team" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="stylesheet" media="screen" href="css/style.css">
