--- a/donations.html
+++ b/donations.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://discord.gg/XwcKN5wXr8'" />
+    <meta http-equiv="refresh" content="0; url='https://direct-link.net/217381/Donations'" />
   </head>
   <body>
-    <p>Redirecting you to Free Donations, Please follow <a href="https://discord.gg/XwcKN5wXr8">this link</a>.If it doesn't load</p>
+    <p>Redirecting you to Free Donations, Please follow <a href="https://direct-link.net/217381/Donations">this link</a>.If it doesn't load</p>
   </body>
 </html>
 <meta charset="utf-8">
