--- a/azurihubdiscord.html
+++ b/azurihubdiscord.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://discord.gg/qats3hzVE7'" />
+    <meta http-equiv="refresh" content="0; url='https://discord.gg/Kfpd8yyAv7'" />
   </head>
   <body>
-    <p>Join manually, <a href="https://discord.gg/qats3hzVE7">DISCORD</a>. If you are having issues</p>
+    <p>Join manually, <a href="https://discord.gg/Kfpd8yyAv7">DISCORD</a>. If you are having issues</p>
   </body>
 </html>
 <meta charset="utf-8">
