--- a/discord/index.html
+++ b/discord/index.html
@@ -34,14 +34,14 @@
         }
     </style>
     <link rel="stylesheet" type="text/css" href="../src/style.css">
-    <meta http-equiv="refresh" content="200; url=https://discord.gg/ahWqfWnQkx">
+    <meta http-equiv="refresh" content="3; url=https://discord.gg/BHDdpRFjM4">
 </head>
   
 <body>
 
 <div class="rd-box">
     <h1 class="tx-count">Please wait 3 seconds, we're redirecting you!</h1>
-    <h5 class="tx-inst"><a class="tx-redir" href="https://discord.gg/ahWqfWnQkx">Click Here</a> for instant</h5>
+    <h5 class="tx-inst"><a class="tx-redir" href="https://discord.gg/BHDdpRFjM4">Click Here</a> for instant</h5>
 </div>
 
 <div class="footer">
