--- a/tos/index.html
+++ b/tos/index.html
@@ -117,6 +117,8 @@
                     - The item is no longer being supported by the developer<br>
                     - The item does not have a feature, or not as expected.<br><br>
                     You are banned from using the item if you charge back and it will be considered fraud result us to take legal actions
+
+Upon using Azuri Hub, you agree to your IP (hashed) & HWID being logged.
                 </a>
             </div>
         </div>
